# flowless

./: .env  .env.dev  .gitattributes  .gitignore  .gitmodules  compose.yml  dev-compose.yml  readme.md  sonar-project.properties
api/: .gitignore  Dockerfile  README.md  admin.bat  beat.sh  clear_migrations.py  migrate.sh  pyproject.toml  run_celery.bat  run_celery_beat.bat  runserver.bat  scatt.bat  serve.sh  startapp.bat  worker.sh
api/api_core/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
api/celery_tasks/: apps.py  celery.py
api/dashboard/: tests.py  urls.py  views.py
api/docker/: generate_nginx_conf.py  nginx.conf  runme.sh
api/editorial_flow/: __init__.py  channel_discovery.py  configs.py  features.py  inputs.py  matching.py  outputs.py  scoring.py  segment_path.py  segmentation.py
api/editorial_planning/: apps.py  models.py  tasks.py  urls.py
api/etv_scripted_schedule_api/: README.md  __init__.py  client.py  models.py  pyproject.toml
api/grid_layout_preset/: admin.py  apps.py  models.py  urls.py
api/grid_schedule/: admin.py  apps.py  constants.py  models.py  urls.py
api/iptv_player/: apps.py
api/media_source/: admin.py  apps.py  constants.py  data.py  models.py  tasks.py  urls.py
api/project_ops/: admin.py  apps.py  constants.py  tasks.py  urls.py
api/rule_engine/: apps.py  models.py  tasks.py
api/tv_channel/: admin.py  apps.py  models.py  tasks.py  urls.py
api/utils/: base_serializers.py  base_tests.py  constants.py  filters.py  format_with_jinja.py  hash_data.py  llm_service.py  models.py  primary_key_related_field.py  (+3 more)
(+459 files in other folders)
