[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["jack <jack>"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
Django = "^5.2"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"
django-cors-headers = "^4.7.0"
psycopg2 = "^2.9.10"
djx-account = "^0.3.3"
djx-cmds = "^0.2.2"
django-filter = "^25.1"
celery = "^5.5.2"
gevent = "^25.4.2"
djx-websocket = "0.2.0"
django-anymail = {extras = ["sendinblue"], version = "^13.0"}
requests = "^2.32.3"
piper-tts = "^1.4.2"
openai = "^2.36.0"
Jinja2 = "^3.1.6"
django-celery-beat = "^2.9.0"
numpy = "^2.5.0"
scikit-learn = "^1.9.0"
redis = "^7.4"
whitenoise = "^6.8"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
